[gd_scene load_steps=5 format=2]

[ext_resource path="res://scrips_scenes/ui/UIButton.tscn" type="PackedScene" id=1]
[ext_resource path="res://scrips_scenes/ui/GameOver.gd" type="Script" id=2]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://assets/Fonts/MorrisRomanAlternate-Black.ttf"

[sub_resource type="DynamicFont" id=2]
size = 150
font_data = SubResource( 1 )

[node name="GameOver" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = 0.445435
margin_right = 1280.45
margin_bottom = 720.0
color = Color( 0, 0, 0, 0.403922 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 120.0
margin_top = 80.0
margin_right = 1160.0
margin_bottom = 640.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer"]
margin_right = 1040.0
margin_bottom = 140.0
rect_min_size = Vector2( 0, 140 )

[node name="RichTextLabel" type="RichTextLabel" parent="VBoxContainer/CenterContainer"]
margin_left = 180.0
margin_right = 860.0
margin_bottom = 140.0
rect_min_size = Vector2( 680, 140 )
custom_fonts/normal_font = SubResource( 2 )
text = "Game Over"

[node name="CenterContainer2" type="CenterContainer" parent="VBoxContainer"]
margin_top = 144.0
margin_right = 1040.0
margin_bottom = 444.0

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/CenterContainer2"]
margin_left = 296.0
margin_right = 743.0
margin_bottom = 300.0
rect_min_size = Vector2( 0, 300 )
custom_constants/separation = 35
alignment = 1

[node name="Main Menu" parent="VBoxContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 82.0
margin_right = 447.0
margin_bottom = 132.0
text = "Go back to main menu"

[node name="Quit" parent="VBoxContainer/CenterContainer2/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 167.0
margin_right = 447.0
margin_bottom = 217.0
text = "Quit"

[node name="MenuAnimation" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/CenterContainer2/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
